# OBDDimal

./: .gitignore  Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js  testo.txt
.github/workflows/: ci.yml  doc.yml  pr_bench.yml
27/merge/report/: index.html
benches/: bdd_building.rs  bdd_creation.rs  dvo.rs  obddimal_benches.rs  sat.rs
debug_input/: easy1.dimacs  easyns.dimacs
doc/: ci.md
examples/: JHipster.dimacs  JHipster.dimacs.dddmp  automotive02_v1.dimacs-ce.dddmp  automotive02_v1.dimacs.dddmp  automotive02_v2.dimacs-ce.dddmp  automotive02_v2.dimacs.dddmp  automotive02_v3.dimacs-ce.dddmp  automotive02_v3.dimacs.dddmp  automotive02_v4.dimacs-ce.dddmp  automotive02_v4.dimacs.dddmp  automotive02v4.dimacs.dddmp  bdd_generation.rs  bddgeneration.rs  berkeleydb.dimacs-ce.dddmp  berkeleydb.dimacs-nce.dddmp  berkeleydb.dimacs.dddmp  busybox.dimacs  busybox.dimacs.dddmp  busybox_1.18.0.dimacs-ce.dddmp  busybox_1.18.0.dimacs.dddmp  easy2.dimacs  embtoolkit.dimacs-ce.dddmp  embtoolkit.dimacs.dddmp  fiasco.dddmp  fiasco_nce.dddmp  financialServices01.dimacs.dddmp  financialservices01.dimacs.dddmp  invalid.dddmp  ns.dimacs  sandwich.dimacs  sandwich.dimacs-ce.dddmp  sandwich.dimacs-nce.dddmp  sandwich.dimacs.dddmp  simple.bdd  test_comments.dimacs  test_trailing_whitespace.dimacs  testbdd.bdd  trivial.dimacs
examples/assets/: berkeleydb.dimacs  croocked.dimacs  crooked.dimacs  easy3.dimacs  easyns.dimacs  invalidheaderdata.dimacs  invalidheaderdata2.dimacs  invalidheaderformat.dimacs  nonascending.dimacs  ns.dimacs  sandwich_serialized.txt  testserial.txt
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  (+2 more)
obbdimal/: all.html  index.html  sidebar-items.js
obbdimal/bdd/: index.html  sidebar-items.js
obbdimal/input/: index.html  sidebar-items.js
obbdimal/variable_ordering/: index.html  sidebar-items.js
rustdoc/: crates.js  help.html  search-index.js  settings.html  src-files.js
rustdoc/eval_views/: all.html  fn.evaluate_atomic_sets.html  fn.evaluate_slicing.html  fn.evaluate_var_nodecount.html  fn.main.html  index.html  sidebar-items.js  struct.AtomicSetsMeasurement.html  struct.SlicingMeasurement.html  struct.Var2NodeCount.html
rustdoc/obddimal/: all.html  index.html  macro.if_some!.html  macro.if_some.html  sidebar-items.js
rustdoc/testcase_generation/: all.html  fn.main.html  index.html
src/: bdd_manager.rs  bdd_node.rs  build.rs  clap_config.yaml  core.rs  dimacs.rs  lib.rs  main.rs  misc.rs  misc.txt  static_ordering.rs  store.rs  testcase_generation.rs  util.rs  views.rs
src/bdd/: bdd_ds.rs  bdd_graph.rs  bdd_manager.rs  bdd_para_manager.rs  manager.rs  mod.rs
src/bdd_manager/: dvo.rs  dvo_schedules.rs  from_dimacs.rs  graphviz.rs  hash_select.rs  mod.rs  options.rs  order.rs  reduce.rs  sat.rs  swap.rs  test.rs  util.rs
src/core/: apply.rs  bdd_manager.rs  bdd_node.rs  dvo.rs  ite.rs  modify_var_nodes.rs  options.rs  order.rs  reduce.rs  slicing.rs  static_ordering.rs  swap.rs  test.rs
src/input/: boolean_function.rs  mod.rs  parser.rs  static_ordering.rs
src/misc/: hash_select.rs  static_ordering.rs
src/obbdimal/: lib.rs.html
src/store/: bdd.rs  common.rs  dddmp.rs  json.rs  xml.rs
src/util/: graphviz.rs  sat.rs
src/variable_ordering/: mod.rs  static_ordering.rs
src/views/: bdd_view.rs
tests/: coverage.txt
(+309 files in other folders)
