[package]
name = "obddimal"
version = "0.1.0"
edition = "2021"
default-run = "obddimal"

[profile.bench]
debug = true

[profile.release]
debug = true

[lib]
name = "obddimal"
path = "src/lib.rs"
bench = false

[[bin]]
name = "obddimal"
path = "src/main.rs"
bench = false

[[bin]]
name = "testcase_generation"
path = "src/bin/testcase_generation.rs"
bench = false

[[bin]]
name = "eval_views"
path = "src/bin/eval_views.rs"
bench = false

[[bench]]
name = "obddimal_benches"
harness = false

[dependencies]
regex = { version = "1.5" }
rustc-hash = { version = "1.0" }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
concat-idents = "1.1.3"
bitvec = "1.0.1"
indicatif = "0.17.0"
console = "0.15.1"
crossterm = "0.25.0"
enum_dispatch = "0.3.8"
fnv = "1.0.3"
dimacs = { git = "https://github.com/Robbepop/dimacs-parser", version = "0.2.0" }
# https://crates.io/crates/toml
toml = "0.8.8"
serde = { version = "1.0.195", features = ["derive"] }
weak-table = "0.3.2"
serde_json = "1.0.115"
serde-xml-rs = "0.6.0"
csv = "1.3.0"
malachite = {version = "0.4.16", default-features = false, features = ["naturals_and_integers"]}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
collapse = "0.1.2"
