[package]
name = "obddimal"
version = "0.1.0"
edition = "2021"
default-run = "obddimal"

[profile.bench]
debug = true

[profile.release]
debug = true

[lib]
name = "obddimal"
path = "src/lib.rs"
bench = false

[[bin]]
name = "obddimal"
path = "src/main.rs"
bench = false

[[bin]]
name = "testcase_generation"
path = "src/bin/testcase_generation.rs"
bench = false

[[bin]]
name = "eval_views"
path = "src/bin/eval_views.rs"
bench = false

[[bench]]
name = "obddimal_benches"
harness = false

[dependencies]
regex = { version = "1.5" }
rustc-hash = { version = "2.0" }
rand = "0.8"
log = "0.4"
env_logger = "0.11"
concat-idents = "1.1"
bitvec = "1.0"
indicatif = "0.17"
console = "0.15"
crossterm = "0.28"
enum_dispatch = "0.3"
fnv = "1.0"
dimacs = { git = "https://github.com/Robbepop/dimacs-parser", version = "0.2" }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
weak-table = "0.3"
serde_json = "1.0"
serde-xml-rs = "0.6"
csv = "1.3"
malachite = {version = "0.4", default-features = false, features = ["naturals_and_integers"]}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
collapse = "0.1"
